--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <header>
-        <h1>Common CSS Properties</h1>
+        <h1>Common CSS Properties - I have a background</h1>
+        <h2>background color guess what that does!?</h2>
+        <h3>I have a boarder!! that is ridged</h3>
+        <h4>I have the cursor css property used</h4>
     </header>
 </body>
 </html>
