add some more properties

--- a/index.html
+++ b/index.html
@@ -10,10 +10,28 @@
 </head>
 <body>
     <header>
-        <h1>Common CSS Properties - I have a background</h1>
-        <h2>background color guess what that does!?</h2>
-        <h3>I have a boarder!! that is ridged</h3>
-        <h4>I have the cursor css property used</h4>
+        <h1>Common CSS Properties - I have a background-image: URL(img);</h1>
+        <h2>background-color: color; guess what that does!?</h2>
+        <h3>I have a border: value; !! that is ridged</h3>
+        <h4>I have the cursor: value;  css property used</h4>
+        <h5>
+            I have a font-family: Value; i can change the font i can also
+            have font-size: value; to... you gussed it!!
+        </h5>
+        <h6>This has different letter-spacing: value; to you know...</h6>
     </header>
+    <main>
+        <p>
+            We can add something specific things to get across our message
+            <span class="text-decoration">
+                this for example is some text-decorationn: value
+            </span>
+            <span class="line-above">
+                We could add aline above too
+            </span>
+        </p>
+
+        
+    </main>
 </body>
 </html>
