add more properties

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                 We could add aline above too
             </span>
         </p>
+        <h2>Heres a list</h2>
+        <ul class="list">
+            <li>1st item</li>
+            <li>2nd item</li>
+        </ul>
 
         
     </main>
