--- a/index.html
+++ b/index.html
@@ -32,9 +32,27 @@
         </p>
         <h2>Heres a list</h2>
         <ul class="list">
-            <li>1st item</li>
+            <li>item</li>
             <li>2nd item</li>
         </ul>
+
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="2">This is the table head</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Row 1 col 1</td>
+                    <td>Row 1 col 2</td>
+                </tr>
+                <tr>
+                    <td>row 2 col 1</td>
+                    <td>row 2 col 2</td>
+                </tr>
+            </tbody>
+        </table>
 
         
     </main>
