--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                 </tr>
             </tbody>
         </table>
-
+        <code >This is code for (let i = 0; i < items.length; i++){
+        }</code>
         
     </main>
 </body>
