--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
                 </tr>
             </tbody>
         </table>
-        <code >This is code for (let i = 0; i < items.length; i++){
-        }</code>
+        <code>
+            This is code for (let i = 0; i < items.length; i++){}
+        </code>
         
     </main>
 </body>
